# ESP32-PLC

./: .clangd  .gitignore  .gitmodules  README.md  sdkconfig
components/cmd_ladderlib/: CMakeLists.txt  cmd_ladderlib.c  cmd_ladderlib.h
components/cmd_system/: cmd_system.h  cmd_system_common.c  cmd_system_sleep.c
components/cron/: CMakeLists.txt  ccronexpr.c  ccronexpr.h  cron.c  cron.h  ll.c  ll.h
components/dns_server/: dns_server.c
components/dns_server/include/: dns_server.h
components/ftpserver/: ftpserver.c  ftpserver.h
components/ladderlib/: CMakeLists.txt
components/ladderlib_esp32/: CMakeLists.txt  ladder_program_check.c  ladder_program_check.h  ladder_program_json.c  ladder_program_json.h  ladderlib_esp32_gpio.c  ladderlib_esp32_gpio.h  ladderlib_esp32_std.c  ladderlib_esp32_std.h
components/modbus_esp32/: modbus_tcp_client.h
components/webeditor/: CMakeLists.txt  ladder_editor.html  webeditor.c  webeditor.h
components/wifi-provisioning/: CMakeLists.txt  idf_component.yml  wifi-provisioning.c  wifi-provisioning.h
components/wifi-provisioning/examples/esp32-firmware-upload-ota-example/: sdkconfig.defaults
main/: CMakeLists.txt  app_main.c  idf_component.yml
temp/modbus_esp32/: CMakeLists.txt  modbus_tcp_client.c
